fixed bug #48555 (ImageFTBBox() differs from previous versions for texts with new lines)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@282488 c90b9560-bf6c-de11-be94-00142212c4b1